Fix client build and also update datalake to include module-info.java